# social-media-carousel-generator

./: .gitignore  CODEX_CLEAN_REFACTOR.md  README.md  main.py  pyproject.toml  requirements.txt
assets/color_palettes/: palette.json
config/: README.md  config.json  grundlagen_informatik.json  programmieren1.json
generator/: fingerprint.py  generator.py
src/socialgen/: __init__.py  __main__.py  cli.py
tests/: test_cli_smoke.py
